5 March 2018: Wouter
	- Fix to check define of DSA for when openssl is without deprecated.
	- iana port update.

27 February 2018: Wouter
	- Fixup contrib/fastrpz.patch so that it applies.
	- Fix compile without threads, and remove unused variable.
	- Fix compile with staticexe and python module.
	- Fix nettle compile.

22 February 2018: Ralph
	- Save wildcard RRset from answer with original owner for use in
 	  aggressive NSEC.

21 February 2018: Wouter
	- Fix #3512: unbound incorrectly reports SERVFAIL for CAA query
	  when there is a CNAME loop.
	- Fix validation for CNAME loops.  When it detects a cname loop,
	  by finding the cname, cname in the existing list, it returns
	  the partial result with the validation result up to then.
	- more robust cachedump rrset routine.

19 February 2018: Wouter
	- Fix #3505: Documentation for default local zones references
	  wrong RFC.
	- Fix #3494: local-zone noview can be used to break out of the view
	  to the global local zone contents, for queries for that zone.
	- Fix for more maintainable code in localzone.

16 February 2018: Wouter
	- Fixes for clang static analyzer, the missing ; in
	  edns-subnet/addrtree.c after the assert made clang analyzer
	  produce a failure to analyze it.

13 February 2018: Ralph
	- Aggressive NSEC tests

13 February 2018: Wouter
	- tls-cert-bundle option in unbound.conf enables TLS authentication.
	- iana port update.

12 February 2018: Wouter
	- Unit test for auth zone https url download.

12 February 2018: Ralph
	- Added tests with wildcard expanded NSEC records (CVE-2017-15105 test)
	- Processed aggressive NSEC code review remarks Wouter

8 February 2018: Ralph
	- Aggressive use of NSEC implementation. Use cached NSEC records to
	  generate NXDOMAIN, NODATA and positive wildcard answers.

8 February 2018: Wouter
	- iana port update.
	- auth zone url config.

5 February 2018: Wouter
	- Fix #3451: dnstap not building when you have a separate build dir.